--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -13,7 +13,26 @@
         android:layout_height="97dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></LinearLayout>
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/homeTitle"
+            android:layout_width="304dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_semibold"
+            android:paddingStart="30dp"
+            android:paddingTop="32dp"
+            android:text="Home"
+            android:textColor="@color/primary"
+            android:textSize="28dp" />
+
+        <ImageButton
+            android:id="@+id/profileButton"
+            android:layout_width="103dp"
+            android:layout_height="79dp"
+            android:layout_weight="1"
+            android:src="@android:drawable/btn_star" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="412dp"
@@ -29,7 +48,19 @@
             android:layout_width="match_parent"
             android:layout_height="220dp"
             android:orientation="horizontal"
-            android:background="@drawable/white_background_small"/>
+            android:background="@drawable/white_background_small">
+
+            <TextView
+                android:id="@+id/discoverTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/poppins"
+                android:paddingStart="22dp"
+                android:paddingTop="6dp"
+                android:text="Discover books around you"
+                android:textSize="18dp" />
+        </LinearLayout>
         <LinearLayout
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
@@ -37,7 +68,19 @@
             android:layout_width="match_parent"
             android:layout_height="220dp"
             android:orientation="horizontal"
-            android:background="@drawable/white_background_small"/>
+            android:background="@drawable/white_background_small">
+
+            <TextView
+                android:id="@+id/libraryTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/poppins"
+                android:paddingStart="22dp"
+                android:paddingTop="6dp"
+                android:text="Search in the library"
+                android:textSize="18dp" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_marginStart="10dp"
@@ -46,6 +89,18 @@
             android:layout_width="match_parent"
             android:layout_height="220dp"
             android:background="@drawable/white_background_small"
-            android:orientation="horizontal" />
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/readingTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:fontFamily="@font/poppins"
+                android:paddingStart="22dp"
+                android:paddingTop="6dp"
+                android:text="Still reading"
+                android:textSize="18dp" />
+        </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
